Fixed an issue with header spacing on the people page

--- a/assets/css/people.css
+++ b/assets/css/people.css
@@ -1,5 +1,5 @@
 #root {
-  margin-top: 2rem;
+  margin-top: 5rem;
   margin-bottom: 4rem;
 }
 
